[gd_scene load_steps=7 format=3 uid="uid://cuqr1tj6ddkgm"]

[ext_resource type="Script" uid="uid://dkbrtyakl1ht" path="res://game_objects/spawner/spawner.gd" id="1_s6gf1"]
[ext_resource type="Texture2D" uid="uid://dd6tyn2ew874c" path="res://assets/sprites/circle.png" id="1_yp8kn"]
[ext_resource type="PackedScene" uid="uid://gle1as0pok8k" path="res://game_objects/rock/rock.tscn" id="2_5lm3y"]
[ext_resource type="FontFile" uid="uid://cf7pwort5hh46" path="res://assets/fonts/patrick_hand_regular.ttf" id="2_s6gf1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yog7w"]
radius = 37.0135

[sub_resource type="LabelSettings" id="LabelSettings_5lm3y"]
font = ExtResource("2_s6gf1")
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="Spawner" type="Area2D"]
visible = false
collision_layer = 0
collision_mask = 413
script = ExtResource("1_s6gf1")
object_scene = ExtResource("2_5lm3y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yog7w")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.095, 0.095)
texture = ExtResource("1_yp8kn")

[node name="Label" type="Label" parent="."]
offset_left = -28.0
offset_top = -11.0
offset_right = 28.0
offset_bottom = 12.0
text = "SPAWNER"
label_settings = SubResource("LabelSettings_5lm3y")

[node name="SpawnTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 8.0

[node name="GroundCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundCollider"]
shape = SubResource("CircleShape2D_yog7w")

[connection signal="timeout" from="SpawnTimer" to="." method="attempt_to_spawn"]
